falta terminar de llenar privacidad y terminos, agregue y quite archivos, y agregue al config de tailwind una nueva fuente, tambien agregue el correo bueno al footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,5 @@
 ---
 import TermsAndConditions from "../pages/TermsAndConditions.astro";
-import Contact from "../pages/Contact.astro";
 import PrivacyAdvise from "../pages/PrivacyAdvise.astro";
 ---
 
@@ -21,7 +20,7 @@ import PrivacyAdvise from "../pages/PrivacyAdvise.astro";
         <div class="ml-1 mr-1">
             <p>
                 <a
-                    href="mailto:astro@gmail.com?subject=Consulta&body=Hola, tengo una pregunta."
+                    href="mailto:info@wahustreaming.com?subject=Consulta&body=Hola, tengo una pregunta."
                 >
                     Contáctanos |
                 </a>
