--- a/src/pages/PrivacyAdvise.astro
+++ b/src/pages/PrivacyAdvise.astro
@@ -1,6 +1,144 @@
 ---
-
+import Layout from "../layouts/Layout.astro";
 ---
-<body>
-    <p>AVISO DE PRIVACIDAD</p>
-</body>
+
+<Layout>
+    <div class="bg-slate-900 px-5 py-10">
+        <!-- Ajusta el margen superior para que el contenido no quede oculto -->
+        <div class="max-w-screen-2xl mx-auto mt-28">
+            <!-- Cambia 'mt-20' según la altura de tu navbar -->
+            <div
+                class="text-lime-400 text-3xl mb-5 text-start font-montserrat font-variant-caps"
+            >
+                <h1>Aviso de Privacidad</h1>
+            </div>
+            <div class="text-slate-400 mt-3 space-y-5 text-justify">
+                <p>
+                    Conforme a lo previsto en la legislación aplicable en
+                    materia de protección de datos personales, y en cumplimiento
+                    de la obligación a cargo de Wahu® (a través de la persona
+                    moral responsable de los datos personales) consistente en
+                    proteger los datos personales de sus clientes, afiliados y/o
+                    beneficiados de cualquiera de los productos, servicios o
+                    membresías pertenecientes al concepto comercialmente
+                    conocido como Wahu®, hacemos de tu conocimiento lo
+                    siguiente:
+                </p>
+
+                <p class="text-xl font-bold">
+                    1. Contenido de los Datos Personales
+                </p>
+
+                <p>
+                    De acuerdo con la Ley, se entiende como “Datos Personales”
+                    cualquier información concerniente a una persona física
+                    identificada o identificable. Para efectos del presente
+                    Aviso de Privacidad, de manera enunciativa mas no
+                    limitativa, se entenderán como “Datos Personales”:
+                </p>
+
+                <p>
+                    Usted es responsable del uso de su cuenta, incluyendo el no
+                    autorizar a terceros, por lo que le pedimos sea cuidadoso
+                    para proteger la seguridad de su cuenta y contraseña.
+                </p>
+
+                <p class="text-xl font-bold">1.1. Datos Generales</p>
+
+                <p>
+                    Nombre(s) y apellidos, fecha de nacimiento, sexo, estado
+                    civil, existencia o no de hijos, domicilio, teléfono fijo
+                    (de casa u oficina), teléfono celular, correo electrónico,
+                    entre otros datos similares concernientes a una persona.
+                </p>
+
+                <p class="text-xl font-bold">
+                    1.2. Revistas y Transacciones en línea
+                </p>
+
+                <p>
+                    Cuando te registres y/o te suscribas para recibir alguno de
+                    los productos de Wahu® (tales como renta de contenidos,
+                    boletines electrónicos, entre otros) en cualquiera de
+                    nuestras plataformas (sitio web y otros mecanismos, aparatos
+                    o plataformas), además de los datos generales, se
+                    considerarán Datos Personales los relacionados con tarjetas
+                    bancarias, tales como nombre del tarjetahabiente, número de
+                    tarjeta, fecha de vencimiento de la tarjeta, tipo de tarjeta
+                    y código de seguridad, en su caso el domicilio y cualquier
+                    otra información necesaria para la suscripción y/o
+                    transacción en línea.
+                </p>
+
+                <p>
+                    Los Datos Personales referidos en este punto únicamente
+                    estarán sujetos a las Finalidades del Tratamiento
+                    establecidas más adelante en el presente Aviso de
+                    Privacidad, por el tiempo que dure la relación comercial; es
+                    decir, una vez que la relación y sus efectos concluyan, los
+                    Datos Personales serán eliminados de nuestras bases de
+                    datos.
+                </p>
+
+                <p class="text-xl font-bold">1.3. Redes Sociales</p>
+
+                <p>
+                    Las redes sociales (tales como Facebook®, Instagram®,
+                    Twitter®, LinkedIn®, entre otras) constituyen una
+                    plataforma de comunicación y de interconexión entre
+                    plataformas digitales de los distintos usuarios, son ajenas
+                    a Wahu® y, por lo tanto, no se encuentran bajo su
+                    responsabilidad. La información que proporciones dentro de
+                    redes sociales en las que Wahu® participa como usuario, no
+                    constituye ni forma parte de los Datos Personales sujetos a
+                    la protección de este Aviso de Privacidad, siendo esta
+                    responsabilidad de la empresa prestadora de esa plataforma y
+                    de quien lo publica.
+                </p>
+
+                <p>
+                    Los Datos Personales mencionados en los apartados 1.1. al
+                    1.2. del presente Aviso de Privacidad serán recabados
+                    mediante el llenado de los formatos y/o mediante la
+                    recopilación de información o documentación requerida por
+                    Wahu®, vía electrónica en cualquiera de las páginas de
+                    internet de Wahu® (<a href="https://wahustreaming.com/privacy-policy"
+                    class="text-lime-400 underline"
+                    >https://wahustreaming.com</a>), así como
+                    páginas de internet presentes o futuras (“Páginas de
+                    internet de Wahu®”), o inclusive de manera personal, cuando
+                    así proceda.
+                </p>
+
+                <p>
+                    Nota: La titularidad de los derechos sobre las páginas de
+                    internet puede corresponder a Media Streaming, S.A. de C.V.,
+                    o bien, a cualquier otra sociedad filial o asociada a Wahu®
+                </p>
+
+                <p class="text-xl font-bold">1.4. Cookies</p>
+
+                <p>
+                    Las cookies son archivos de texto que son descargados
+                    automáticamente y almacenados en un disco duro del equipo de
+                    cómputo del usuario al navegar en una determinada página de
+                    internet y que permiten al servidor de internet recordar
+                    algunos datos del usuario. Por medio de este Aviso de
+                    Privacidad te informamos que Wahu® utiliza ciertas cookies
+                    únicamente para obtener información del lugar de acceso.
+                </p>
+
+                <p class="text-xl font-bold">
+                    2. Persona responsable de recabar Datos Personales
+                </p>
+            </div>
+        </div>
+    </div>
+</Layout>
+
+<style>
+    .font-variant-caps {
+        font-variant-caps: all-small-caps;
+        font-family: "Montserrat", sans-serif;
+    }
+</style>
