--- a/src/pages/TermsAndConditions.astro
+++ b/src/pages/TermsAndConditions.astro
@@ -1,6 +1,180 @@
 ---
-
+import Layout from "../layouts/Layout.astro";
 ---
-<body>
-    <p>Términos y condiciones</p>
-</body>
+
+<Layout>
+    <div class="bg-slate-900 px-5 py-10">
+        <!-- Ajusta el margen superior para que el contenido no quede oculto -->
+        <div class="max-w-screen-2xl mx-auto mt-28">
+            <!-- Cambia 'mt-20' según la altura de tu navbar -->
+            <div
+                class="text-lime-400 text-3xl mb-5 text-start font-montserrat font-variant-caps"
+            >
+                <h1>Términos y Condiciones</h1>
+            </div>
+            <div class="text-slate-400 mt-3 space-y-5 text-justify">
+                <p>
+                    Wahu® es un servicio de la empresa Media Streaming, S.A. de
+                    C.V. (en lo sucesivo Wahu®), que le permite acceder y
+                    rentar contenidos audiovisuales que se encuentren
+                    disponibles en línea, a través de nuestra plataforma,
+                    exclusivamente para uso personal por parte del Usuario, por
+                    lo que está prohibida la reproducción y distribución total o
+                    parcial del Contenido, para fines comerciales o en eventos
+                    públicos o cualquier otro uso que no sea exclusivamente
+                    personal.
+                </p>
+                <p>
+                    Toda la entrega de contenidos audiovisuales al Usuario,
+                    serán vía streaming a los dispositivos compatibles, durante
+                    el tiempo en que Wahu® y el titular de los derechos del
+                    producto tengan los derechos para proveerlo, sujetándose a
+                    las condiciones y restricciones de los presentes términos de
+                    uso.
+                </p>
+                <p>
+                    Los presentes términos y condiciones regulan la relación
+                    entre Usted (indistintamente Usuario, Usuario Final ó
+                    Cliente) y Wahu®, en relación con el servicio de renta de
+                    contenidos audiovisuales en formato digital, eventos en vivo
+                    y cualquier otra obra audiovisual (el “Contenido”)
+                    proporcionada por Wahu®, vía Internet, incluyendo cualquier
+                    medio digital que se utilice actualmente o cualquier otro
+                    que sea utilizado en el futuro (el “Servicio”).
+                </p>
+                <p>
+                    Al registrarse como Usuario, usted entiende, está conforme y
+                    acepta expresa e irrevocablemente los términos y condiciones
+                    del Servicio, así como aquellas restricciones y salvedades
+                    que aquí se establecen.
+                </p>
+                <p>
+                    Wahu® se reserva el derecho exclusivo a modificar los
+                    términos y condiciones, en cualquier tiempo y por cualquier
+                    circunstancia, sirviendo como notificación de cualquier
+                    modificación, el envío de la comunicación a través de correo
+                    electrónico y/o la publicación en la página de Internet <a
+                        href="https://wahustreaming.com"
+                        class="text-lime-400 underline"
+                        >https://wahustreaming.com</a
+                    > para que surta efectos frente al Usuario.
+                </p>
+
+                <p class="text-xl font-bold">1. Registro/Cuenta</p>
+
+                <p>
+                    Para poder utilizar el Servicio, usted debe registrarse en
+                    la página de Internet <a
+                        href="https://wahustreaming.com"
+                        class="text-lime-400 underline"
+                        >https://wahustreaming.com</a
+                    > y crear una cuenta personal con información exacta y actualizada,
+                    siguiendo los pasos e instrucciones que allí se señalan.
+                </p>
+                <p>
+                    Usted es responsable del uso de su cuenta, incluyendo el no
+                    autorizar a terceros, por lo que le pedimos sea cuidadoso
+                    para proteger la seguridad de su cuenta y contraseña.
+                </p>
+                <p>
+                    Le recomendamos asegurarse de cerrar correctamente su sesión
+                    al concluir cada visita, a fin de evitar mal uso por parte
+                    de terceros no autorizados, pues en este caso Wahu® no
+                    tendrá responsabilidad.
+                </p>
+                <p>
+                    A menos que se trate de recolectar información para la
+                    prestación del servicio (por ejemplo: pagos, costos,
+                    transacciones, etc.), ya sea por Wahu® y/o terceros que
+                    recaben información, no revele la información de su cuenta a
+                    nadie más, ya que Wahu® no se hace responsable por ningún
+                    daño, perjuicio, afectación o pérdida derivada del uso no
+                    autorizado de su cuenta. Usted acepta notificar
+                    inmediatamente a Wahu® sobre cualquier fallo de seguridad
+                    en su cuenta, a través de la cuenta de correo electrónico: <a
+                        href="mailto:info@wahustreaming.com"
+                        class="text-lime-400 underline"
+                        >info@wahustreaming.com</a
+                    >.
+                </p>
+                <p>
+                    Usted está de acuerdo y se obliga a proporcionar y mantener
+                    actualizada, información exacta y completa cuando se
+                    registre y durante la vigencia de uso del Servicio.
+                </p>
+                <p>
+                    Cualquier información que proporcione para el registro y
+                    actualización, se regirá por la Política de Privacidad de
+                    Wahu®, consultable en <a
+                        href="https://wahustreaming.com/privacy-policy"
+                        class="text-lime-400 underline"
+                        >https://wahustreaming.com/privacy-policy</a
+                    >.
+                </p>
+
+                <p class="text-xl font-bold">2. Servicio</p>
+                <p>
+                    El Servicio únicamente está disponible para personas de 13
+                    años de edad y mayores. Personas entre 13 y 17 años deben
+                    revisar los términos y condiciones con sus padres o tutores,
+                    en el entendido que registrándose, consienten el uso del
+                    Servicio y entienden, están conformes y aceptan sus términos
+                    y condiciones, así como aquellas restricciones y salvedades
+                    que aquí se establecen.
+                </p>
+                <p>
+                    Es responsabilidad exclusiva de los padres o tutores, el
+                    imponer restricciones o medidas de acceso a sus hijos
+                    menores de edad o tutorados, respecto de la(s) cuenta(s) de
+                    la(s) que son(sean) titular(es).
+                </p>
+                <p>
+                    El Servicio está disponible en la República Mexicana. Usted
+                    acepta no utilizar o intentar utilizar el Servicio fuera de
+                    los Territorios establecidos, salvo contenidos o eventos que
+                    sean de acceso internacional y estén licenciados para tal
+                    fin. Wahu® puede utilizar tecnologías para restringir el
+                    uso del Servicio fuera de los Territorios, así como
+                    verificar el cumplimiento de esta restricción y, en su caso,
+                    aplicar las sanciones que sean procedentes en caso de
+                    incumplimiento.
+                </p>
+                <p>
+                    El uso del Servicio requiere, o podría requerir,
+                    dispositivos compatibles, acceso a Internet y determinado
+                    software (pudiendo aplicar tarifas). Asimismo, el Servicio
+                    puede requerir actualizaciones periódicas y puede ser
+                    afectado por el desempeño de cualquiera de los factores
+                    antes mencionados.
+                </p>
+                <p>
+                    Se recomienda el acceso a Internet de alta velocidad para su
+                    uso regular, así como utilizar la última versión del
+                    software requerido para acceder al Servicio y puede
+                    requerirse para determinadas transacciones u opciones y para
+                    acceder a cierto Contenido. Para reproducciones en formato
+                    SD, se requiere por lo menos 1.5 Mbps de ancho de banda y
+                    para reproducciones en sistema HD, se requiere por lo menos
+                    5 Mbps. Usted acepta y se obliga a cumplir con estos
+                    requisitos, los que pueden cambiar periódicamente.
+                </p>
+                <p>
+                    Wahu® podrá incluir y/o remitir información, por cualquier
+                    medio, respecto a servicios y/o promociones otorgadas por
+                    socios comerciales, independiente al Servicio prestado por
+                    Wahu®. Cualquier cobro o cargo que deban realizarse por
+                    virtud del Servicio, podrán ser realizados por Wahu® y/o
+                    terceros que tengan relación con Wahu®.
+                </p>
+
+            </div>
+        </div>
+    </div>
+</Layout>
+
+<style>
+    .font-variant-caps {
+        font-variant-caps: all-small-caps;
+        font-family: "Montserrat", sans-serif;
+    }
+</style>
