se corrige page de creators

--- a/src/pages/creators.astro
+++ b/src/pages/creators.astro
@@ -7,7 +7,10 @@ import Cast from '../components/Cast.astro';
 ---
 
 <Layout>
-    <CreatorsDetails />
+	<div class="mt-28">
+		<CreatorsDetails />
+	</div>
+    
 	<Aditional />
 	<Production />
 	<Cast />
