se agrega funcionalidad de contacto en navbar Fixes #4

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -47,17 +47,15 @@ onMount(() => {
         </div>
         <!-- Contact and Login -->
         <div class="flex space-x-4 mr-5">
+            
             <button
-                class="bg-transparent
-        text-gray-400
-        font-semibold
-        py-2
-        px-4
-        hover:border-transparent
-        rounded"
-            >
-                CONTÁCTANOS
-            </button>
+    class="bg-transparent text-gray-400 font-semibold py-2 px-4 hover:border-transparent rounded"
+    onclick="window.location.href='mailto:info@wahustreaming.com?subject=Consulta&body=Hola, tengo una pregunta.'"
+>
+    CONTÁCTANOS
+</button>
+
+
             <button
                 class="bg-transparent
           text-gray-700
