Se terminmo la pagina de detalles de creadores

--- a/src/components/CreatorsDetails.astro
+++ b/src/components/CreatorsDetails.astro
@@ -2,63 +2,101 @@
 import AlanCreador from "../assets/AlanCastañeda-CREADORES.png";
 ---
 
-<div class="bg-slate-800 h-screen pl-10">
-    <div class="text-2xl pt-36">
-        <h1 class="text-lime-400 font-tittle text-5xl">Conoce</h1>
-        <h1
-            class="text-slate-400 uppercase font-extrabold ml-16 -mt-3 text-4xl"
-        >
-            A los creadores
-        </h1>
+<div class="bg-slate-800 min-h-screen pl-10">
+  <div class="text-2xl pt-36">
+    <h1 class="text-lime-400 font-tittle text-6xl md:text-7xl">Conoce</h1>
+    <h1
+      class="text-slate-400 uppercase font-extrabold ml-16 -mt-3 text-5xl md:text-6xl"
+    >
+      A los creadores
+    </h1>
+  </div>
+  <div class="flex flex-wrap mt-16 justify-center">
+    <img
+      src={AlanCreador.src}
+      alt="Alan Castaneda CREADORES"
+      class="w-auto h-auto object-cover rounded-md hover-effect max-w-xs md:max-w-sm"
+    />
+    <div class="flex flex-col ml-28">
+      <p class="text-lime-400 uppercase text-3xl md:text-4xl">Alan Castañeda</p>
+      <div class="mt-8">
+        <p class="text-slate-400 text-lg md:text-xl">País de origen: México</p>
+        <p class="text-slate-400 text-lg md:text-xl">
+          País de residencia: México
+        </p>
+        <p class="text-slate-400 text-lg md:text-xl">
+          Fecha de nacimiento: 15/noviembre/2000
+        </p>
+        <p class="text-slate-400 text-lg md:text-xl">Nacionalidad: mexicano</p>
+        <p class="text-slate-400 text-lg md:text-xl">
+          Correo electrónico: alancastaneda151515@gmail.com
+        </p>
+        <p class="text-slate-400 text-lg md:text-xl">
+          Facebook: <a
+            href="https://www.facebook.com/AlanMCastaneda"
+            target="_blank"
+            class="text-slate-400 underline"
+            >https://www.facebook.com/AlanMCastaneda</a
+          >
+        </p>
+        <p class="text-slate-400 text-lg md:text-xl">
+          Instagram: <a
+            href="https://www.instagram.com/alancastaneda15/"
+            target="_blank"
+            class="text-slate-400 underline"
+            >https://www.instagram.com/alancastaneda15/</a
+          >
+        </p>
+        <p class="text-slate-400 text-lg md:text-xl">
+          TikTok: <a
+            href="https://www.tiktok.com/@alancastaneda15"
+            target="_blank"
+            class="text-slate-400 underline"
+            >https://www.tiktok.com/@alancastaneda15</a
+          >
+        </p>
+        <p class="text-slate-400 text-lg md:text-xl">Twitter: ---</p>
+        <p class="text-slate-400 text-lg md:text-xl">
+          LinkedIn: <a
+            href="https://www.linkedin.com/in/alancastaneda/"
+            target="_blank"
+            class="text-slate-400 underline"
+            >https://www.linkedin.com/in/alancastaneda/</a
+          >
+        </p>
+      </div>
     </div>
-    <div class="flex mt-10">
-        <img
-            src={AlanCreador.src}
-            alt="Alan Castaneda CREADORES"
-            class="w-auto h-auto object-cover rounded-md hover-effect"
-        />
-        <div class="flex flex-col ml-7">
-            <p class="text-lime-400 uppercase text-2xl">Alan Castañeda</p>
-            <div class="mt-8">
-                <p class="text-slate-400 text-xs">País de origen: México</p>
-                <p class="text-slate-400 text-xs">País de residencia: México</p>
-                <p class="text-slate-400 text-xs">
-                    Fecha de nacimiento: 15/noviembre/2000
-                </p>
-                <p class="text-slate-400 text-xs">Nacionalidad: mexicano</p>
-                <p class="text-slate-400 text-xs">
-                    Correo electrónico: alancastaneda151515@gmail.com
-                </p>
-                <p class="text-slate-400 text-xs">
-                    Facebook: <a
-                        href="https://www.facebook.com/AlanMCastaneda"
-                        target="_blank"
-                        class="text-slate-400 text-xs"
-                        >https://www.facebook.com/AlanMCastaneda</a>
-                </p>
-                <p class="text-slate-400 text-xs">
-                    Instagram: <a
-                        href="https://www.instagram.com/alancastaneda15/"
-                        target="_blank"
-                        class="text-slate-400 text-xs"
-                        >https://www.instagram.com/alancastaneda15/</a>
-                </p>
-                <p class="text-slate-400 text-xs">
-                    TikTok: <a
-                        href="https://www.tiktok.com/@alancastaneda15"
-                        target="_blank"
-                        class="text-slate-400 text-xs"
-                        >https://www.tiktok.com/@alancastaneda15</a>
-                </p>
-                <p class="text-slate-400 text-xs">Twitter: ---</p>
-                <p class="text-slate-400 text-xs">
-                    LinkedIn: <a
-                        href="https://www.linkedin.com/in/alancastaneda/"
-                        target="_blank"
-                        class="text-slate-400 text-xs"
-                        >https://www.linkedin.com/in/alancastaneda/</a>
-                </p>
-            </div>
-        </div>
-    </div>
+  </div>
+  <div class="py-6 px-28">
+    <p class="text-lime-400 uppercase text-3xl md:text-4xl">Reseña</p>
+    <p class="text-slate-400 text-lg md:text-xl">
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa
+      accusantium quibusdam, esse nihil, consequuntur, tempora totam ducimus eum
+      porro alias voluptates temporibus officiis autem. Non, perferendis omnis.
+      Voluptas amet vel incidunt ullam iusto reiciendis maiores sit facilis
+      quibusdam adipisci tenetur eaque corrupti eveniet nam aut eum, perferendis
+      ea labore, recusandae voluptates ab rerum! Commodi cupiditate tenetur, cum
+      ullam voluptate quo eligendi deserunt sequi corporis quidem nobis dicta
+      consequuntur voluptas excepturi, atque iusto placeat enim nostrum eum
+      quisquam tempore quis veritatis pariatur assumenda! Magnam beatae
+      voluptatem minima ratione facilis, aut doloremque voluptatum nostrum
+      obcaecati iste, modi unde corporis quo enim dignissimos?
+    </p>
+  </div>
+  <div class="py-6 px-28">
+    <p class="text-lime-400 uppercase text-3xl md:text-4xl">Estudios</p>
+    <p class="text-slate-400 text-lg md:text-xl">
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa
+      accusantium quibusdam, esse nihil, consequuntur, tempora totam ducimus eum
+      porro alias voluptates temporibus officiis autem. Non, perferendis omnis.
+      Voluptas amet vel incidunt ullam iusto reiciendis maiores sit facilis
+      quibusdam adipisci tenetur eaque corrupti eveniet nam aut eum, perferendis
+      ea labore, recusandae voluptates ab rerum! Commodi cupiditate tenetur, cum
+      ullam voluptate quo eligendi deserunt sequi corporis quidem nobis dicta
+      consequuntur voluptas excepturi, atque iusto placeat enim nostrum eum
+      quisquam tempore quis veritatis pariatur assumenda! Magnam beatae
+      voluptatem minima ratione facilis, aut doloremque voluptatum nostrum
+      obcaecati iste, modi unde corporis quo enim dignissimos?
+    </p>
+  </div>
 </div>
